--- a/Bet Buddy/Main.storyboard
+++ b/Bet Buddy/Main.storyboard
@@ -784,7 +784,7 @@
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Host" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Exe-al-F3b">
                                                             <rect key="frame" x="149.5" y="0.0" width="75" height="70"/>
                                                             <fontDescription key="fontDescription" name="NTR" family="NTR" pointSize="30"/>
-                                                            <nil key="textColor"/>
+                                                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="crown_red_bg" translatesAutoresizingMaskIntoConstraints="NO" id="sAS-1Y-IfP">
