--- a/Bet Buddy/Main.storyboard
+++ b/Bet Buddy/Main.storyboard
@@ -170,7 +170,6 @@
                                                                     <constraint firstAttribute="trailing" secondItem="pqm-FY-HPf" secondAttribute="trailing" id="hNg-Vv-HDH"/>
                                                                     <constraint firstAttribute="height" constant="116" id="ieo-OW-Xmo"/>
                                                                     <constraint firstItem="nmG-a9-cK6" firstAttribute="top" secondItem="pm0-g4-xfD" secondAttribute="top" id="oRU-J2-dgZ"/>
-                                                                    <constraint firstAttribute="width" constant="358" id="zqz-UI-vLz"/>
                                                                 </constraints>
                                                             </view>
                                                         </subviews>
@@ -265,7 +264,6 @@
                                                                                 <rect key="frame" x="0.0" y="0.0" width="358" height="116"/>
                                                                                 <constraints>
                                                                                     <constraint firstAttribute="height" constant="116" id="WXE-FU-l0X"/>
-                                                                                    <constraint firstAttribute="width" constant="358" id="sOe-8z-Vis"/>
                                                                                 </constraints>
                                                                             </imageView>
                                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MAHJONG" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AgH-aI-Yv1">
@@ -305,7 +303,6 @@
                                                                     <constraint firstAttribute="height" constant="116" id="NjG-2L-4bI"/>
                                                                     <constraint firstItem="qYJ-Zd-uy7" firstAttribute="leading" secondItem="wG4-cR-HXi" secondAttribute="leading" id="Y4r-RB-9uW"/>
                                                                     <constraint firstAttribute="bottom" secondItem="qYJ-Zd-uy7" secondAttribute="bottom" id="bih-2j-uPk"/>
-                                                                    <constraint firstAttribute="width" constant="358" id="cuf-cr-zy0"/>
                                                                     <constraint firstAttribute="bottom" secondItem="oGs-6b-moD" secondAttribute="bottom" id="eij-QH-CDG"/>
                                                                     <constraint firstItem="qYJ-Zd-uy7" firstAttribute="top" secondItem="wG4-cR-HXi" secondAttribute="top" id="zg8-kj-KFE"/>
                                                                 </constraints>
@@ -451,28 +448,24 @@
                                 <rect key="frame" x="0.0" y="104" width="414" height="534"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="LobbyPlayerTableViewCell" rowHeight="120" id="Dgg-Lx-T36" customClass="LobbyPlayerTableViewCell" customModule="Bet_Buddy" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="120"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="LobbyPlayerTableViewCell" rowHeight="120.5" id="Dgg-Lx-T36" customClass="LobbyPlayerTableViewCell" customModule="Bet_Buddy" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="120.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Dgg-Lx-T36" id="I2K-Ey-SM9">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="120"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="120.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.crop.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="7FA-gg-BAC">
-                                                    <rect key="frame" x="20" y="20.5" width="80" height="79"/>
+                                                    <rect key="frame" x="20" y="20.5" width="80" height="79.5"/>
                                                     <color key="tintColor" systemColor="placeholderTextColor"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="80" id="3yo-Cs-ZN4"/>
-                                                        <constraint firstAttribute="height" constant="80" id="veY-b9-uWE"/>
+                                                        <constraint firstAttribute="height" constant="80" id="a7k-Fn-ewA"/>
+                                                        <constraint firstAttribute="width" constant="80" id="srd-Sm-4rP"/>
                                                     </constraints>
                                                 </imageView>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="checkmark.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="kjX-w0-rzi">
-                                                    <rect key="frame" x="20" y="20.5" width="80" height="79"/>
+                                                    <rect key="frame" x="20" y="20.5" width="80" height="79.5"/>
                                                     <color key="tintColor" systemColor="systemGreenColor"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="80" id="Vye-cs-Khd"/>
-                                                        <constraint firstAttribute="width" constant="80" id="eL0-SL-3ja"/>
-                                                    </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lee Hsien Short" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="52u-oF-j0Q">
                                                     <rect key="frame" x="120" y="20" width="151" height="53.5"/>
@@ -481,13 +474,13 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Beginner" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MbE-5R-Hsf">
-                                                    <rect key="frame" x="120" y="57.5" width="69.5" height="42.5"/>
+                                                    <rect key="frame" x="120" y="58" width="69.5" height="42.5"/>
                                                     <fontDescription key="fontDescription" name="NTR" family="NTR" pointSize="20"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$50" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LND-x4-yZY">
-                                                    <rect key="frame" x="349" y="28" width="45" height="64"/>
+                                                    <rect key="frame" x="349" y="28.5" width="45" height="64"/>
                                                     <fontDescription key="fontDescription" name="NTR" family="NTR" pointSize="30"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
